workspace = { members = ["zesty_engine2_derive"] }
[package]
name = "zesty_engine2"
version = "0.1.0"
edition = "2021"
authors = ["Izzminhal Akmal <programmer.coleslaw981@slmail.me>"]
description = "Minimal rasterizer with OBJ support"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
num-traits = "0.2.19"
obj-rs = "0.7.1"
softbuffer = "0.4.2"
winit = "0.30.0"
zesty_engine2_derive = { version = "0.1.0", path = "zesty_engine2_derive" }

[[bin]]
name = "zesty_engine2"
test = false
