workspace = {}
[package]
name = "zesty_engine2"
version = "0.1.0"
edition = "2021"
authors = ["Izzminhal Akmal <programmer.coleslaw981@slmail.me>"]
description = "Minimal rasterizer with OBJ support"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
float-cmp = "0.9.0"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
softbuffer = "0.4.2"
thiserror = "2.0.12"
tobj = "4.0.3"
winit = "0.30.0"

[[bin]]
name = "zesty_engine2"
test = false

[lib]
doctest = false
